redesign page titles and nav

--- a/themes/metrumy/layouts/_default/single.html
+++ b/themes/metrumy/layouts/_default/single.html
@@ -5,7 +5,7 @@
 <section class="article wrapper-small">
 
   <div class="date secondary"> {{ .Date.Format "Jan 2, 2006" }} </div>
-  <h1>{{ .Title }}</h1>
+  <h1 class="article-title">{{ .Title }}</h1>
   
   {{ .Content }}
 
