add new article (ford on promoting)

--- a/themes/metrumy/sass/_video.scss
+++ b/themes/metrumy/sass/_video.scss
@@ -6,7 +6,8 @@
 	position:relative;
 	padding-bottom:56.25%;
 	padding-top: 0;
-	height:0;
+	margin-bottom: 1em;
+	height: 0;
 	overflow:hidden;
 }
 
