--- a/themes/metrumy/layouts/partials/postList.html
+++ b/themes/metrumy/layouts/partials/postList.html
@@ -1,7 +1,16 @@
 <div class="post-list">
   {{ range (.Paginator 10).Pages }}
     <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-    <p>{{ .Summary }}</p>
+    {{ if in .Params.categories "nosummary" }}
+      {{ .Content }}
+    {{ else }}
+      {{ .Summary }}
+    {{ end }}
+
+    {{ if .Truncated }}
+    <a href="{{ .RelPermalink }}">Continue&#8230;</a>
+    {{ end }}
+
     <div class="date secondary"> {{ .Date.Format "Jan 2, 2006" }} </div>
   {{ end }}
 </div>
