redesign site title

--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -3,7 +3,7 @@
 {{ partial "navbar.html" . }}
 
 <section class="wrapper-small">
-  <h1 class=" ">Making Fast Web Interfaces that Work Smoothly on Average Devices and Will Help You Sell</h1>  
+  <h1 class=" ">Finding Simple Solutions to Complex UI Problems</h1>  
 
   <p>
     Hi, I'm Bartosz and I make interfaces.
