--- a/themes/metrumy/layouts/partials/header.html
+++ b/themes/metrumy/layouts/partials/header.html
@@ -18,7 +18,7 @@
   <link rel="dns-prefetch" href="//fonts.googleapis.com">
 
   <!--stylesheets-->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,400i,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/css/dist.css">
 
 </head>
