front page redesign

--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -2,18 +2,8 @@
 
 {{ partial "navbar.html" . }}
 
-<section class="wrapper-small">
-  <h1 class=" ">Finding Simple Solutions to Complex UI Problems</h1>  
+{{ partial "masthead.html" . }}
 
-  <p>
-    Hi, I'm Bartosz and I make interfaces.
-  </p>
-
-</section>
-
-<section  class="wrapper-small">
-  <h2>Recently on <a href="./blog">Blog</a>:</h2>
-  {{ partial "postListShort.html" . }}
-</section>
+{{ partial "onblog.html" . }}
 
 {{ partial "footer.html" . }}
