--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -11,13 +11,22 @@ $background-color:    #f5f3f1;
 $black:               #222;
 $white:               #fff;
 $red:                 #dd2222;
+$red-dark:            #aa2222;
 $green:               #118822;
+$green-dark:          #004010;
 $blue:                #2233dd;
 $blue-dark:             darken($blue, 10%);
-$purple:              #8800ff;
+$blue-light:          #5577ff;
+$purple:              #5500aa;
 $grey:                #777;
 $grey-light:            lighten($grey, 40%);
 $grey-dark:             darken($grey, 20%);
+
+$yellow:             #ffee66;
+$background-yellow:  #f3e59c;
+$orange-light:       #ffdd66;
+$orange-deep:        #ee3322;
+$night:              #200044;
 
 // sceen sizes
 $screen-big:            1024px;
