--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -4,6 +4,8 @@
 
 {{ partial "masthead.html" . }}
 
-{{ partial "onblog.html" . }}
+{{ partial "homeContent.html" . }}
+
+{{ partial "onBlog.html" . }}
 
 {{ partial "footer.html" . }}
