--- a/themes/metrumy/layouts/partials/masthead.html
+++ b/themes/metrumy/layouts/partials/masthead.html
@@ -1,100 +1,9 @@
-<div class="logo">
-  MODULO<br>8
-</div>
+
 <section class="block block-head">
   
   <div class="big-title">
-    <h1 class="">Here's how to avoid tedious UI redesigns:</h1>
+    <h1>Here's How to Avoid<br> Tedious UI Redesigns:</h1>
     <h2>...and Improve Page Performance</h2>
   </div>
-  <div class="head-content">
-    <p>The most interesting things happen once your software is in the wild and people are using it.
-       That's when you can really see what's working and what to change.
-    </p>
-        
-    <p>
-      When your site's UI is easy to rearrange &mdash; modular &mdash; you can adjust to the real world
-      without tedious redesigns.
-      You <strong>just swap UI modules</strong> in an HTML file.
-    </p>
-  </div>
-</section>
-
-<section class="block">
-  <div class="big-quote">
-    “It's hard to predict anything. You need to stay agile.”
-    <br>
-    “Don't assume what's best. Try a few ideas.”
-    <div class="big-quote--name">Someone Pretty Damn Wise</div>
-  </div>
-</section>
-
-<section class="block">
-  <div class="big-typo">
-  <div class="big-typo--title">Smooth Interactions</div>
-
-  There's overwhelming variety of internet browsing devices on the market.
-  We need to think about what will present the product well and also work smoothly
-  <span class="big-typo--select">on a cheap hardware and half-decent wi-fi</span>.
-  People will often use your stuff at train stations, airports and in restaurants.
-  
-  </div>
-</section>
-
-<section class="block">
-  <div class="big-typo">
-  <div class="big-typo--title">Words Win</div>
-
-  Pictures alone are vague.
-  People say “1 picture is like 1000 words”.
-  But a picture will not make a proposition as clear and simple as a well designed sentence.
-  That's why I like <span class="big-typo--select">typography</span>. 
-  Good typography is a tool to achieve clarity.
-  
-  </div>  
-</section>
-
-<section class="block">
-  <div class="big-typo">
-  <div class="big-typo--title">Embrace Foundations</div>
-
-  If I need to pick between working on something essential  or adding bells and whistles, I pick essentials.
-  It's just hard to be really good at all of them, so why even focus on <i>nice to haves</i>?
-  Working extra on things like <span class="big-typo--select">clarity (intuitiveness, readability) and load speed</span>
-  will give you more than any neophiliac thing.
-  
-  </div>  
-</section>
-
-<section class="block">
-  <div class="big-typo">
-  <h2 class="big-typo--title">Simplicity is Tricky</h2>
-
-  It's easy to achieve perceived simplicity and pay for it with real complexity.
-  For instance, you can make a UI that your users will appreciate,
-  but you'll pay severely with code editing difficulties.
-  Real simplicity means <span class="big-typo--select">neat visuals and clear implementation.</span> 
-  
-  </div>  
-</section>  
-
-<section class="block">
-  <div class="big-quote">
-    “This site should load slower.”
-    <br>
-    “It's not complicated enough.”
-    <div class="big-quote--name">No One Ever</div>
-  </div>
-</section>
-
-<section class="wrapper-small block-email">
-  <h2 class="block-email--title">Hi, I'm Bartosz and I make web interfaces.</h2>
-  <span class="block-email--email">Here's my email:
-
-<script type="text/javascript">
-    var bfxrpxl = ['.','l','z','.','z','l','h','>','e','s','l','a',':','"','t','i','i','@','b','o','c','h','m','m','a','t','o','a',' ','s','o','m','"','r','e','.','o','f','r','<','i','a','i','@','.','r','o','t','o','l','a','c','l','s','<','"',' ','b','=','e','o','m','h','/','l','>','"','g','m','a','l','m','c','a','s','a','=','l','l','g','a','e'];var xzfilix = [21,73,28,74,67,58,55,81,48,66,57,62,15,53,25,11,33,29,61,37,36,3,38,49,1,13,59,10,40,45,76,77,39,4,17,35,14,6,24,0,51,50,72,68,60,63,20,64,26,18,80,75,42,44,78,8,2,22,7,56,65,9,16,79,34,54,47,69,31,43,52,70,41,32,27,71,46,12,19,30,23,5];var cogtjda= new Array();for(var i=0;i<xzfilix.length;i++){cogtjda[xzfilix[i]] = bfxrpxl[i]; }for(var i=0;i<cogtjda.length;i++){document.write(cogtjda[i]);} 
-</script>
-
-</span>
 
 </section>
