--- a/themes/metrumy/layouts/partials/navbar.html
+++ b/themes/metrumy/layouts/partials/navbar.html
@@ -1,4 +1,12 @@
 <nav>
+  <a class="logo" href="{{ .Site.BaseURL }}">
+  <svg version="1.1"
+       baseProfile="full"
+       width="30" height="30"
+       xmlns="http://www.w3.org/2000/svg">
+       <circle id="logo-circle" cx="15" cy="15" r="10" fill="black" />
+  </svg>
+  </a>
 <ul class="center">
   <li>
     <a href="{{ .Site.BaseURL }}">home</a>
