--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -24,7 +24,7 @@ $grey-dark:             darken($grey, 20%);
 
 $yellow:             #ffee66;
 $background-yellow:  #f3e59c;
-$orange-light:       #ffdd66;
+$orange-light:       #ff9922;
 $orange-deep:        #ee3322;
 $night:              #200044;
 
