--- a/themes/metrumy/layouts/partials/postList.html
+++ b/themes/metrumy/layouts/partials/postList.html
@@ -1,6 +1,6 @@
 <div class="post-list">
   {{ range (.Paginator 10).Pages }}
-    <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+    <h2 class="post-list--post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
     {{ if in .Params.categories "nosummary" }}
       {{ .Content }}
     {{ else }}
