--- a/themes/metrumy/sass/_lists.scss
+++ b/themes/metrumy/sass/_lists.scss
@@ -1,4 +1,5 @@
-ul {
+ul,
+ol {
   padding: 0;
   margin: 0 0 1em;
 }
@@ -8,31 +9,58 @@ ol li {
   margin-left: 1em;
 }
 
+.list-title {
+  font-weight: bold;
+  margin: 1em 0 0.25em;
+}
+
 .post-list {
   margin: 0 0 3em;
 }
 
-.list-contacts li {
-  display: inline-block;
-  list-style: none;
-  margin: 0 1em 0 0;
-
-  @media all and (max-width: $screen-mid) {
-    display: block;
-    text-align: left;
-    margin: 0;
+.list--contacts {
+  display: flex;
+  justify-content: space-between; 
+  @media (max-width: $screen-mid) {
+    flex-direction: column;
   }
 }
 
-.list-contacts li:last-child {
+.list--contacts li {
+  display: flex;
+  list-style: none;
+  margin: 0 1em 0 0;
+}
+
+.list--contacts li:last-child {
   margin: 0;
 }
 
 .list-contacts-tag {
-  @media all and (max-width: $screen-mid) {
+  @media (max-width: $screen-mid) {
     display: inline-block;
     min-width: 4em;
   }
+}
+
+.post-list h2 {
+  font-size: 1.25em;
+  font-weight: 600;
+  line-height: 1.25;
+  margin: 1.6em 0 0.8em
+}
+
+.post-list h3 {
+  font-size: 1em;
+  font-weight: 600;
+  line-height: 1.5;
+  margin: 2em 0 1em;
+}
+
+.post-list--post-title {
+  border-left: 0.25em solid $grey; 
+  padding-left: 0.25em;
+  margin-left: -0.5em !important;
 }
 
 .post-list--short h3 {
