--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -8,4 +8,13 @@
 
 {{ partial "onBlog.html" . }}
 
+<section  class="wrapper-small block--extra">
+  <h2 class="list-title">Other Publication</h2>
+  <div class="post-list post-list--short">
+  <h3>
+  <a href="https://bart747.github.io/process">On Creative Process</a>
+  </h3>
+  </div>
+</section>
+
 {{ partial "footer.html" . }}
