general ui redesign

--- a/themes/metrumy/layouts/_default/single.html
+++ b/themes/metrumy/layouts/_default/single.html
@@ -11,7 +11,7 @@
 
 </section>
 
-<section class="subnav wrapper-small">
+<section class="subnav">
   <div class="subnav--line">
     {{ if .Prev }}
       <div class="subnav--tag">prev: </div>
