--- a/themes/metrumy/layouts/partials/masthead.html
+++ b/themes/metrumy/layouts/partials/masthead.html
@@ -1,9 +1,6 @@
 
-<section class="block block-head">
+<section class="masthead">
   
-  <div class="big-title">
-    <h1>Here's How to Avoid<br> Tedious UI Redesigns:</h1>
-    <h2>...and Improve Page Performance</h2>
-  </div>
+    <h1 class="masthead---title">Searching for Simple Solutions for UI Problems</h1>
 
 </section>
