--- a/themes/metrumy/sass/_typography.scss
+++ b/themes/metrumy/sass/_typography.scss
@@ -84,10 +84,13 @@ li code {
 
 .article {
   margin: 0 auto 3em;
+  max-width: 35em;
+  padding: 0 1em;
 }
 
 .date {
   font-size: $small-font-size;
+  text-align: right;
 }
 
 .secondary {
@@ -98,4 +101,8 @@ li code {
   @media (max-width: $screen-sml) {
     margin: 0.5em 0 1em;
   }
+}
+
+.small-txt {
+  font-size: $medium-font-size;
 }
