--- a/themes/metrumy/layouts/section/blog.html
+++ b/themes/metrumy/layouts/section/blog.html
@@ -3,7 +3,7 @@
 
 {{ partial "navbar.html" . }}
 
-<div class="wrapper-small">
+<div class="blog--list">
   <h1>Blog</h2>
   {{ partial "postList.html" . }}
 </div>
