--- a/themes/metrumy/sass/_masthead.scss
+++ b/themes/metrumy/sass/_masthead.scss
@@ -1,33 +1,19 @@
-.block-head {
-  margin: 2em 0;
-}
 
-.big-title {
+.masthead {
+  max-width: 35em;
+  margin: 0 auto;
+  padding: 0 1em;
   text-align: center;
-  color: $black;
-  margin: 2em auto;
-  padding: 2em 1em;
 }
 
-.big-title h1 {
+.masthead---title {
   font-size: 3em;
   line-height: 1;
   letter-spacing: -0.025em;
-  margin: 0 0 0.1em;
+  margin: 1em 0 1em;
+  //text-align: center;
   @media (max-width: $screen-sml) {
     font-size: 2.5em;
   }
 }
 
-.big-title h2 {
-  font-size: 1.5em;
-  font-weight: bold;
-  line-height: 1.1;
-  letter-spacing: -0.01em;
-  margin: 0;
-}
-
-.head-content {
-  @include wrapper-small;
-  margin: 0 auto 2.9em;
-}
