--- a/themes/metrumy/sass/_lists.scss
+++ b/themes/metrumy/sass/_lists.scss
@@ -56,6 +56,10 @@ ol li {
   padding: 0 1em;
 }
 
+.blog--list .subnav {
+  padding: 0;
+}
+
 .post-list h2 {
   font-size: 1.25em;
   font-weight: 600;
