--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -7,10 +7,12 @@
 <div class="home-main">
 <div class="home-left">
 
-<h2>Recently on <a  href="{{ .Site.BaseURL }}blog">Blog</a></h2>
+<h2 class="section-title">Recently on <a  href="{{ .Site.BaseURL }}blog">Blog</a>:</h2>
 <div class="post-list">
   {{ range (.Paginator 3).Pages }}
+    <div class="post-list--date-top secondary"> {{ .Date.Format "Jan 2, 2006" }} </div>
     <h2 class="post-list--post-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+
     {{ if in .Params.categories "nosummary" }}
       {{ .Content }}
     {{ else }}
@@ -21,7 +23,6 @@
     <a href="{{ .RelPermalink }}">Continue&#8230;</a>
     {{ end }}
 
-    <div class="date secondary"> {{ .Date.Format "Jan 2, 2006" }} </div>
   {{ end }}
  
   <h2><a class="next" href="{{ .Site.BaseURL }}blog">All Posts</a></h2>
@@ -36,17 +37,17 @@
 {{ partial "publs.html" . }}
 
 <section  class=" ">
-  <h3 class="list-title">Top 3 Posts</h3>
   <ul class="post-list post-list--short">
-  <li>
-  <a href="https://bart747.github.io/ui-coins/">Learning UI Design from Coins (on Contrast)</a>
-  </li>
-  <li>
-  <a href="https://bart747.github.io/research-decision/">Research vs Making Decisions</a>
-  </li>
-  <li>
-  <a href="https://bart747.github.io/henry-ford-for-makers/">Henry Ford for Makers: Quotes on Design</a>
-  </li>
+    <h3 class="list-title">Top 3 Posts</h3>
+    <li>
+    <a href="https://bart747.github.io/ui-coins/">Learning UI Design from Coins (on Contrast)</a>
+    </li>
+    <li>
+    <a href="https://bart747.github.io/research-decision/">Research vs Making Decisions</a>
+    </li>
+    <li>
+    <a href="https://bart747.github.io/henry-ford-for-makers/">Henry Ford for Makers: Quotes on Design</a>
+    </li>
   </ul>
 </section>
 {{ partial "contact.html" . }}
