--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -30,6 +30,24 @@ a {
   }
 }
 
+section {
+  margin: 0;
+}
+
+@mixin wrapper-mid {
+  max-width: 35em; 
+  margin: 0 auto;
+}
+
+@mixin wrapper-big {
+  max-width: 64em; 
+  margin: 0 auto;
+}
+
+.wrapper--nopad {
+  margin: 0 -1em;
+}
+
 audio,
 canvas,
 iframe,
@@ -41,7 +59,7 @@ video {
 
 nav {
   margin: 0;
-  padding: 0.5em 0.5em;
+  padding: 0.5em 0.5em 0  ;
 }
 
 nav ul {
@@ -59,7 +77,7 @@ nav li:last-child {
 }
 
 .subnav {
-  max-width: 35em;
+  @include wrapper-mid;
   margin: 0 auto 3em;
   padding: 0 1em; 
 }
@@ -74,14 +92,6 @@ nav li:last-child {
 .subnav--tag {
   display: inline-block;
   min-width: 4em;
-}
-
-section {
-  margin: 0;
-}
-
-.wrapper--nopad {
-  margin: 0 -1em;
 }
 
 .block {
@@ -112,8 +122,8 @@ hr {
 }
 
 footer {
+  @include wrapper-mid;
   margin: 3em auto;
-  max-width: 35em;
   padding: 0 1em;
 }
 
