--- a/themes/metrumy/sass/_home.scss
+++ b/themes/metrumy/sass/_home.scss
@@ -1,7 +1,6 @@
 .home-main {
   display: block;
-  max-width: 64em; 
-  margin: 0 auto;
+  @include wrapper-big;
   @media screen and (min-width: 64em) {
     display: flex;
     justify-content: flex-start;
@@ -10,8 +9,7 @@
 
 .home-left,
 .home-right {
-  max-width: 35em; 
-  margin: 0 auto;
+  @include wrapper-mid;
   padding: 0 1em;
 }
 
@@ -23,21 +21,13 @@
 }
 
 .home-right {
-  flex-grow: 2;
+  flex-grow: 1;
 }
 
 .home-highlight {
   background: $background-yellow;
   padding: 0.125em 0.25em 0.05em;
   border-radius: 5px;
-}
-
-.home-content h2 {
-  font-weight: bold;
-  font-size: 1.5em;
-  line-height: 1.25;
-  color: $black;
-  margin: 1.33em 0 0.66em;
 }
 
 .word-highlight {
