--- a/themes/metrumy/sass/_lists.scss
+++ b/themes/metrumy/sass/_lists.scss
@@ -23,6 +23,10 @@ ol li {
   line-height: 1.25;
   list-style: none;
   margin: 0 0 0.5em;
+  &:last-of-type {
+    margin: 0;
+  }
+
 }
 
 .list--contacts {
@@ -51,8 +55,7 @@ ol li {
 }
 
 .blog--list {
-  max-width: 35em;
-  margin: auto; 
+  @include wrapper-mid;
   padding: 0 1em;
 }
 
@@ -62,14 +65,14 @@ ol li {
 
 .post-list h2 {
   font-size: 1.25em;
-  font-weight: 600;
+  font-weight: bold;
   line-height: 1.25;
   margin: 1.6em 0 0.8em
 }
 
 .post-list h3 {
   font-size: 1em;
-  font-weight: 600;
+  font-weight: bold;
   line-height: 1.5;
   margin: 2em 0 1em;
 }
@@ -80,11 +83,15 @@ h2.post-list--post-title {
   font-weight: 600;
   line-height: 1.25;
   color: $black;
-  margin: 1.33em 0 0.66em;
+  margin: 0 0 0.66em;
+}
+
+.post-list--date-top {
+   font-size: 0.75em;
+   margin: 4em 0 0;
 }
 
 .post-list--short h3 {
-  font-weight: normal;
   line-height: 1.25;
   margin: 0 0 0.5em;
 }
