fix blog link path

--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -25,10 +25,8 @@
 
   {{ end }}
  
-  <h2><a class="next" href="{{ .Site.BaseURL }}blog">All Posts</a></h2>
+  <h2><a class="next" href="{{ .Site.BaseURL }}/blog">All Posts</a></h2>
 </div>
-
-
 
 
 </div>
