--- a/themes/metrumy/sass/_typography.scss
+++ b/themes/metrumy/sass/_typography.scss
@@ -84,12 +84,12 @@ li code {
 
 .article {
   @include wrapper-mid;
-  margin: 0 auto 3em;
+  margin: 3em auto;
   padding: 0 1em;
 }
 
 .date {
-  font-size: $small-font-size;
+  font-size: 0.75em;
 }
 
 .secondary {
@@ -100,10 +100,6 @@ li code {
   @media (max-width: $screen-sml) {
     margin: 0.5em 0 1em;
   }
-}
-
-.section-title {
-  margin-top: 0;
 }
 
 .small-txt {
