--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -162,6 +162,14 @@ button,
   color: $blue;
 }
 
+.red {
+  color: $red;
+}
+
+.orange {
+  color: $orange;
+}
+
 .logo {
   position: fixed;
   top: 0;
