--- a/themes/metrumy/layouts/404.html
+++ b/themes/metrumy/layouts/404.html
@@ -1,21 +1,16 @@
 {{ partial "head.html" . }}
 {{ partial "navbar.html" . }}
 
-<section class="wrapper-small">
-  <div>
-    <h2>The page you were looking for isn't here</h2>
-
-    <p>Maybe it doesn't exist anymore or has been moved.</p>
-    <p>Or maybe the address was typed incorrectly.</p>
+<section class="article">
     
-    <div class="post-list">
-      <h3><a href="{{ .Site.BaseURL }}">HOME</a></h3>
-      {{ range (.Paginator 3).Pages }}
-        <h3 class="list-title"><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
-      {{ end }}
-    </div>
+    <h2><span class="orange">Oops!</span><br>
+    The page you were looking for isn't here.</h2>
 
-  </div>
+    <p>Maybe it doesn't exist anymore or has been moved.<br>
+      Or maybe the address was typed incorrectly.</p>
+    
+  <br>
+   {{ partial "postListShort.html" . }}
 </section>
 
 {{ partial "footer.html" . }}
