--- a/themes/metrumy/layouts/partials/postListShort.html
+++ b/themes/metrumy/layouts/partials/postListShort.html
@@ -1,5 +1,8 @@
-<div class="post-list post-list--short">
-  {{ range (.Paginator 3).Pages }}
-    <h3 class=""><a href="{{ .Permalink }}">{{ .Title }}</a></h3>
-  {{ end }}
-</div>
+<section class="">
+  <ul class="post-list post-list--short">
+    <h2 class="post-list--title">Recently on <a href="./blog">Blog</a>:</h2>
+    {{ range (.Paginator 3).Pages }}
+      <li class=""><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+    {{ end }}
+  </ul>
+</section>
