--- a/themes/metrumy/layouts/partials/postListHome.html
+++ b/themes/metrumy/layouts/partials/postListHome.html
@@ -1,5 +1,5 @@
 <div class="post-list">
-  <h2 class="post-list--title home-section-title">Recently on <a  href="{{ .Site.BaseURL }}blog">Blog</a>:</h2>
+  <h2 class="post-list--title home-section-title">Recently on <a  href="{{ .Site.BaseURL }}/blog">Blog</a>:</h2>
 
   {{ range (.Paginator 3).Pages }}
     <div class="post-list--post">
